# src/api/openapi.json
@@ -1368,6 +1368,9 @@
                     },
                     "name": {
                         "type": "string"
+                    },
+                    "terminal": {
+                        "type": "boolean"
                     }
                 }
             },
@@ -1379,6 +1382,9 @@
                         "items": {
                             "$ref": "#/components/schemas/config.AppInfo"
                         }
+                    },
+                    "default_terminal": {
+                        "type": "string"
                     }
                 }
             },
@@ -1715,10 +1721,10 @@
             "server.StatsResponse": {
                 "type": "object",
                 "properties": {
-                    "tool_usage": {
-                        "type": "object",
-                        "additionalProperties": {
-                            "type": "integer"
+                    "top_tools": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/components/schemas/server.StatsToolCount"
                         }
                     },
                     "total_entries": {
@@ -1732,6 +1738,17 @@
                     },
                     "total_tokens": {
                         "type": "integer"
+                    }
+                }
+            },
+            "server.StatsToolCount": {
+                "type": "object",
+                "properties": {
+                    "count": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
                     }
                 }
             },
